compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__let_assert__just_variable.snap
---
source: compiler-core/src/erlang/tests/let_assert.rs
expression: "pub fn go() {\n  let assert x = Ok(1)\n  x\n}"
---
----- SOURCE CODE
pub fn go() {
  let assert x = Ok(1)
  x
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/0]).

-spec go() -> {ok, integer()} | {error, any()}.
go() ->
    X = {ok, 1},
    X.
