compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__let_assert__let_assert_as.snap
---
source: compiler-core/src/erlang/tests/let_assert.rs
expression: "pub fn main() {\n  let msg = \"custom\" <> \" error\"\n  let assert as msg Ok(y) = Ok(1)\n  y\n}"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-spec main() -> integer().
main() ->
    Msg = <<"custom"/utf8, " error"/utf8>>,
    _assert_subject = {ok, 1},
    {ok, Y} = case _assert_subject of
        {ok, _} -> _assert_subject;
        _assert_fail ->
            erlang:error(#{gleam_error => let_assert,
                        message => Msg,
                        value => _assert_fail,
                        module => <<"my/mod"/utf8>>,
                        function => <<"main"/utf8>>,
                        line => 3})
    end,
    Y.
