compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__let_assert__let_assert_as_no_var.snap
---
source: compiler-core/src/erlang/tests/let_assert.rs
expression: "pub fn main() {\n  let assert as \"custom error\" Ok(y) = Ok(1)\n  y\n}"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-spec main() -> integer().
main() ->
    _assert_subject = {ok, 1},
    {ok, Y} = case _assert_subject of
        {ok, _} -> _assert_subject;
        _assert_fail ->
            erlang:error(#{gleam_error => let_assert,
                        message => <<"custom error"/utf8>>,
                        value => _assert_fail,
                        module => <<"my/mod"/utf8>>,
                        function => <<"main"/utf8>>,
                        line => 2})
    end,
    Y.
