compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__let_assert__list_pattern.snap
---
source: compiler-core/src/erlang/tests/let_assert.rs
expression: "pub fn go() {\n  let assert [1, x, 3] = [1, 2, 3]\n  x\n}"
---
----- SOURCE CODE
pub fn go() {
  let assert [1, x, 3] = [1, 2, 3]
  x
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/0]).

-spec go() -> integer().
go() ->
    case [1, 2, 3] of
        [1, X, 3] ->
            X;

        _value ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"go",
                line => 2,
                value => _value,
                start => 16,
                'end' => 48,
                pattern_start => 27,
                pattern_end => 36
            })
    end.
