compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__let_assert__one_var.snap
---
source: compiler-core/src/erlang/tests/let_assert.rs
expression: "pub fn go() {\n  let assert Ok(y) = Ok(1)\n  y\n}"
---
----- SOURCE CODE
pub fn go() {
  let assert Ok(y) = Ok(1)
  y
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/0]).

-spec go() -> integer().
go() ->
    case {ok, 1} of
        {ok, Y} ->
            Y;

        _value ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"go",
                line => 2,
                value => _value,
                start => 16,
                'end' => 40,
                pattern_start => 27,
                pattern_end => 32
            })
    end.
