compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__let_assert__string_pattern.snap
---
source: compiler-core/src/erlang/tests/let_assert.rs
expression: "pub fn go() {\n  let assert \"Hello!\" = \"Hel\" <> \"lo!\"\n}"
---
----- SOURCE CODE
pub fn go() {
  let assert "Hello!" = "Hel" <> "lo!"
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/0]).

-spec go() -> binary().
go() ->
    case <<"Hel"/utf8, "lo!"/utf8>> of
        ~"Hello!" = _value ->
            _value;

        _value@1 ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"go",
                line => 2,
                value => _value@1,
                start => 16,
                'end' => 52,
                pattern_start => 27,
                pattern_end => 35
            })
    end.
