compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__let_assert__string_prefix_pattern.snap
---
source: compiler-core/src/erlang/tests/let_assert.rs
expression: "pub fn go() {\n  let assert \"Hello \" <> name = \"Hello John\"\n  name\n}"
---
----- SOURCE CODE
pub fn go() {
  let assert "Hello " <> name = "Hello John"
  name
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/0]).

-spec go() -> binary().
go() ->
    case ~"Hello John" of
        <<"Hello "/utf8, Name/binary>> ->
            Name;

        _value ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"go",
                line => 2,
                value => _value,
                start => 16,
                'end' => 58,
                pattern_start => 27,
                pattern_end => 43
            })
    end.
